--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "eslint": "^7.20.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-react": "^7.22.0",
-    "git-commit-msg-linter": "^3.0.0"
+    "git-commit-msg-linter": "^3.0.0",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4"
   }
 }
