chore: add jest scripts

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --passWidthNoTest",
+    "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
