--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
+    "faker": "^5.4.0",
     "git-commit-msg-linter": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
