--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["*"]
+    },
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
