--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
         "react-hooks"
     ],
     "rules": {
+        "comma-dangle": ["error", "always-multiline"],
+        "quotes": [2, "single"],
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-filename-extension": [
